--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
-    "angular-route": "^1.5.8"
+    "angular-chart.js": "^1.0.0",
+    "angular-route": "^1.5.8",
+    "chart.js": "^2.2.1"
   }
 }
