--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-animate": "^1.5.8",
     "angular-chart.js": "^1.0.0",
     "angular-route": "^1.5.8",
-    "chart.js": "^2.2.1"
+    "chart.js": "^2.2.1",
+    "ng-dialog": "^0.6.2"
   }
 }
